--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -32,5 +32,5 @@ jobs:
           directory: /home/inpac
           github_username: ${{ github.actor }}
           # use github secrets for this
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_TOKEN }}
           github_repo_name: Max-Herbold/inpac_remote
