--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -29,7 +29,7 @@ jobs:
           api_token: ${{ secrets.PA_API_TOKEN }}
           domain_name: inpac.pythonanywhere.com
           console_id: 35332376
-          directory: /home/inpac
+          directory: /home/inpac/inpac_remote
           github_username: ${{ github.actor }}
           # use github secrets for this
           github_token: ${{ secrets.GH_TOKEN }}
