--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -8,19 +8,37 @@ on:
       - main
 
 jobs:
-  test:
-    name: test
+  Test:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.10"]
     steps:
-      - uses: actions/checkout@v3
-      - name: Install requirements
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
         run: |
-          python -m pip install -r requirements.txt
-      - name: Question 1
+          python -m pip install -r requirements-test.txt
+
+      - name: Run tests
+        run: |
+          pytest
+  Deploy:
+    needs: Test
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.10"]
+    steps:
+      - name: Deploy to PythonAnywhere
         # Sourced from: https://github.com/umuttopalak/pythonanywhere-deploy-action
         uses: ./.github/actions/release
         with:
