--- a/.github/actions/release/action.yml
+++ b/.github/actions/release/action.yml
@@ -29,7 +29,7 @@ inputs:
     description: "Github token"
     required: true
   github_repo_name:
-    description: "Github repository name (yes, literally the name)"
+    description: "Github repository user/repo"
     required: true
 
 runs:
