--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -39,7 +39,7 @@ jobs:
         # send a get request https://inpac.pythonanywhere.com/api/update/update
         run: |
           echo "PULL_STATUS=$(curl -s -o /dev/null -w '%{http_code}' -X GET -H '{ Authorization: `${{ secrets.UPDATE_TOKEN}}`}' https://inpac.pythonanywhere.com/api/update/update)" >> $GITHUB_ENV
-          echo "status: $env.PULL_STATUS"
+          echo "status: $PULL_STATUS"
       - name: Reload remote
         # dont run this step if the previous step failed
         if: env.PULL_STATUS == 200
