--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Request remote pull
         # send a get request https://inpac.pythonanywhere.com/api/update/update
         run: |
-          echo "PULL_STATUS=$(curl -s -o /dev/null -w %{http_code} -X GET -H {Authorization:a} https://inpac.pythonanywhere.com/api/update/update)" >> $GITHUB_ENV
+          echo "PULL_STATUS=$(curl -s -o /dev/null -w %{http_code} -X GET -H Update-Token:${{secrets.UPDATE_TOKEN}} https://inpac.pythonanywhere.com/api/update/update)" >> $GITHUB_ENV
           echo "status: $PULL_STATUS"
       - name: Reload remote
         # dont run this step if the previous step failed
