--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -37,8 +37,9 @@ jobs:
     steps:
       - name: Request remote pull
         # send a get request https://inpac.pythonanywhere.com/api/update/update
+        # echo "PULL_STATUS=$(curl -s -o /dev/null -w %{http_code} -X GET -H Update-Token:${{secrets.UPDATE_TOKEN}} https://inpac.pythonanywhere.com/api/update/update)" >> $GITHUB_ENV
         run: |
-          echo "PULL_STATUS=$(curl -s -o /dev/null -w %{http_code} -X GET -H Update-Token:${{secrets.UPDATE_TOKEN}} https://inpac.pythonanywhere.com/api/update/update)" >> $GITHUB_ENV
+          echo "PULL_STATUS=$(curl -s -o /dev/null -w %{http_code} -X GET -H Update-Token:${{secrets.UPDATE_TOKEN}} https://inpac.pythonanywhere.com/api/update/update)"
           echo "status: $PULL_STATUS"
       - name: Reload remote
         # dont run this step if the previous step failed
