--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -46,7 +46,7 @@ jobs:
         # dont run this step if the previous step failed
         if: env.PULL_STATUS == 200
         run: |
-          RELOAD_STATUS=$(curl -s -o /dev/null -w %{http_code} -X POST -H Authorization:`Token ${{secrets.PA_API_TOKEN}}` https://www.pythonanywhere.com/api/v0/user/inpac/webapps/inpac.pythonanywhere.com/reload/)
+          RELOAD_STATUS=$(curl -s -o /dev/null -w %{http_code} -X POST -H Authorization:"Token ${{secrets.PA_API_TOKEN}}" https://www.pythonanywhere.com/api/v0/user/inpac/webapps/inpac.pythonanywhere.com/reload/)
           echo status: $RELOAD_STATUS
           if [ $RELOAD_STATUS -ne 200 ]; then
             echo "Reload failed"
