--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   Test:
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     strategy:
       fail-fast: false
       matrix:
@@ -32,12 +33,12 @@ jobs:
           pytest
   Deploy:
     needs: Test
+    timeout-minutes: 1
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Request remote pull
         # send a get request https://inpac.pythonanywhere.com/api/update/update
-        # echo "PULL_STATUS=$(curl -s -o /dev/null -w %{http_code} -X GET -H Update-Token:${{secrets.UPDATE_TOKEN}} https://inpac.pythonanywhere.com/api/update/update)" >> $GITHUB_ENV
         run: |
           PULL_STATUS=$(curl -s -o /dev/null -w %{http_code} -X GET -H Update-Token:${{secrets.UPDATE_TOKEN}} https://inpac.pythonanywhere.com/api/update/update)
           echo "PULL_STATUS=$PULL_STATUS" >> $GITHUB_ENV
