--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -16,13 +16,19 @@ jobs:
       matrix:
         python-version: ["3.10"]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: mirromutth/mysql-action@v1.1
+        with:
+          mysql version: "8.0" # Optional, default value is "latest". The version of the MySQL
+          mysql database: "inpac" # Optional, default value is "test". The specified database which will be create
+          mysql root password: ${{ secrets.db_password }} # Required if "mysql user" is empty, default is empty. The root superuser password
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: |
