--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: mirromutth/mysql-action@v1.1
         with:
           mysql version: "8.0" # Optional, default value is "latest". The version of the MySQL
-          mysql database: "inpac" # Optional, default value is "test". The specified database which will be create
+          mysql database: ${{vars.DB_DATABASE}} # Optional, default value is "test". The specified database which will be create
           mysql root password: ${{ secrets.DB_PASSWORD }} # Required if "mysql user" is empty, default is empty. The root superuser password
 
       - name: Set up Python ${{ matrix.python-version }}
