--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -35,6 +35,11 @@ jobs:
           python -m pip install -r requirements-test.txt
 
       - name: Run tests
+        env:
+          DB_DATABASE: ${{ vars.DB_DATABASE }}
+          DB_USER: ${{ vars.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_HOST: ${{ vars.DB_HOST }}
         run: |
           pytest
   Deploy:
