--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - uses: mirromutth/mysql-action@v1.1
-        with:
-          mysql version: "8.0" # Optional, default value is "latest". The version of the MySQL
-          mysql database: ${{vars.DB_DATABASE}} # Optional, default value is "test". The specified database which will be create
-          mysql root password: ${{ secrets.DB_PASSWORD }} # Required if "mysql user" is empty, default is empty. The root superuser password
+      # - uses: mirromutth/mysql-action@v1.1
+      #   with:
+      #     mysql version: "8.0" # Optional, default value is "latest". The version of the MySQL
+      #     mysql database: ${{vars.DB_DATABASE}} # Optional, default value is "test". The specified database which will be create
+      #     mysql root password: ${{ secrets.DB_PASSWORD }} # Required if "mysql user" is empty, default is empty. The root superuser password
 
       - name: Execute db.sql
         run: |
