--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Execute db.sql
         run: |
+          sudo service mysql start
           mysql -u root -p${{ secrets.DB_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{vars.DB_DATABASE}};"
           mysql -u root -p${{ secrets.DB_PASSWORD }} ${{vars.DB_DATABASE}} < db.sql
 
