--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -15,9 +15,20 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.10"]
+    env:
+      DB_DATABASE: ${{ vars.DB_DATABASE }}
+      DB_USER: ${{ vars.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_HOST: ${{ vars.DB_HOST }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Execute db.sql
+        run: |
+          sudo service mysql start
+          mysql -u root -p${{ secrets.DB_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{vars.DB_DATABASE}};"
+          mysql -u root -p${{ secrets.DB_PASSWORD }} ${{vars.DB_DATABASE}} < db.sql
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
